--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>孙冬(Dysonsun)</strong>，一个感知算法工程师，现在上海工作。</p>
+    <p>Hey，我是<strong>孙冬(Dysonsun)</strong>，一个自动驾驶感知算法工程师，现在上海工作。</p>
 
-    <p>工作、学习之余，我还是一个F1爱好者，同时也很喜欢骑行。</p>
+    <p>工作、学习之余，我还是一个F1赛车爱好者，同时也很喜欢骑行。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a>。我在GitHub主页<a href="https://github.com/Dysonsun">👉GitHub·BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a>搭建的网站。我在GitHub主页<a href="https://github.com/Dysonsun">👉GitHub·Dysonsun</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
